[project]
name = "gisflu"
version = "0.1.3"
description = "Access the GISAID Flu database using Python"
authors = [
    { name = "william", email = "william_swl@163.com" },
]
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.0.3",
    "tqdm>=4.66.4",
    "stamina>=24.2.0",
]
requires-python = ">=3.8"
readme = "README.md"

[project.license]
text = "MIT"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = [
    "tests/temp_test.py",
]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
]
dev = [
    "nox>=2024.4.15",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
