[project]
name = "gisflu"
version = "0.1.9"
description = "Access the GISAID Flu database using Python"
authors = [
    { name = "william", email = "william_swl@163.com" },
]
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.0.3",
    "tqdm>=4.66.4",
    "stamina>=24.2.0",
]
requires-python = ">=3.10"
readme = "docs/index.md"

[project.urls]
Docs = "https://william-swl.github.io/gisflu"
Github = "https://github.com/william-swl/gisflu"

[project.license]
text = "MIT"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = [
    "tests/temp/",
]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
]
dev = [
    "nox>=2024.4.15",
    "ipykernel>=6.29.4",
    "mkdocs-material>=9.5.27",
    "mkdocstrings[python]>=0.25.1",
    "mypy>=1.10.1",
]

[tool.pdm.scripts]
docServe = "mkdocs serve"
docPage = "mkdocs gh-deploy --clean"

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
